--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 project(VectorSilKitAdaptersTap)
+include(FetchContent)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -14,9 +15,29 @@ target_compile_definitions(asio INTERFACE ASIO_STANDALONE=1)
 target_link_libraries(asio INTERFACE Threads::Threads)
 
 if(NOT SILKIT_PACKAGE_DIR)
-    message(FATAL_ERROR "Please set the PATH to the SIL Kit in SILKIT_PACKAGE_DIR: e.g."
-        " cmake -D SILKIT_PACKAGE_DIR=../SilKit-x.y.z-Platform/")
+    FetchContent_Declare(
+        silkit
+        URL https://github.com/vectorgrp/sil-kit/releases/download/sil-kit%2Fv4.0.17/SilKit-4.0.17-ubuntu-18.04-x86_64-gcc.zip
+        DOWNLOAD_DIR ${CMAKE_CURRENT_LIST_DIR}/Downloads
+    )
+
+    message(STATUS "SIL Kit: fetching: silkit")
+    FetchContent_MakeAvailable(silkit)
+
+    message(STATUS "SIL Kit: using source code from: \"${silkit_SOURCE_DIR}\"")
+    set(SILKIT_SOURCE_DIR ${silkit_SOURCE_DIR}/SilKit-Source)
+    message(STATUS "SIL Kit: using pre-built binaries from: ${silkit_SOURCE_DIR}")
+
+    find_package(SilKit 4.0.7
+        HINTS ${silkit_SOURCE_DIR}
+        REQUIRED
+    )
+
+    if(NOT TARGET SilKit::SilKit)
+        message(FATAL_ERROR "Could not find SilKit package by fetching it from github.com")
+    endif()
 endif()
+
 message(STATUS "Searching SilKit package in ${SILKIT_PACKAGE_DIR}")
 find_package(SilKit 4.0.7
     REQUIRED
