--- a/.github/workflows/build-linux-release.yml
+++ b/.github/workflows/build-linux-release.yml
@@ -1,16 +1,27 @@
 name: 'Linux Release Build'
+
 on:
   push:
-    branches: [ "ci-tryouts" ]
+    tags:
+      - "v*.*.*"
+
 jobs:
   linux-release:
     name: Build SIL Kit TAP for Release configuration
     environment: public-github-runners
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v3
-      with:
-        submodules: true
-    - uses: ./.github/actions/build-cmake-preset
-      with:
-        preset-name: linux-release
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+      - name: Build
+        uses: ./.github/actions/build-cmake-preset
+        with:
+          preset-name: linux-release
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          prerelease: true
+          draft: true          
+
