SKA-71 - Establish a workflow for Pre Build SKA packages:
* changed back to workflow is triggered by pushing on a certain branch (for debugging reasons)

--- a/.github/workflows/build-linux-release.yml
+++ b/.github/workflows/build-linux-release.yml
@@ -1,9 +1,13 @@
 name: 'Linux Release Build'
 
+# on:
+#   push:
+#     tags:
+#       - "v*.*.*"
+
 on:
   push:
-    tags:
-      - "v*.*.*"
+    branches: [ "ci-tryouts" ]
 
 jobs:
   linux-release:
@@ -21,6 +25,7 @@ jobs:
           preset-name: linux-release
       - name: Release
         uses: softprops/action-gh-release@v1
+        #if: startsWith(github.ref, 'refs/tags/')
         with:
           prerelease: true
           draft: true          
