--- a/.github/workflows/build-linux-release.yml
+++ b/.github/workflows/build-linux-release.yml
@@ -23,10 +23,10 @@ jobs:
         uses: ./.github/actions/build-cmake-preset
         with:
           preset-name: linux-release
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        #if: startsWith(github.ref, 'refs/tags/')
-        with:
-          prerelease: true
-          draft: true          
+      # - name: Release
+      #   uses: softprops/action-gh-release@v1
+      #   #if: startsWith(github.ref, 'refs/tags/')
+      #   with:
+      #     prerelease: true
+      #     draft: true          
 
