SKA-71 - Establish a workflow for Pre Build SKA packages:
* adding bin folder to release files

--- a/.github/workflows/build-linux-release.yml
+++ b/.github/workflows/build-linux-release.yml
@@ -24,4 +24,7 @@ jobs:
         with:
           prerelease: true
           draft: true
+          files: |
+            _build/bin/*
+            
           
