SKA-71 - Establish a workflow for Pre Build SKA packages:
* fixing path to bin

--- a/.github/workflows/build-linux-release.yml
+++ b/.github/workflows/build-linux-release.yml
@@ -25,6 +25,6 @@ jobs:
           prerelease: true
           draft: true
           files: |
-            _build/bin/*
+            _build/linux-release/bin/*
             
           
