SKA-71 - Establish a workflow for Pre Build SKA packages:
* adding packaging of SIL Kit Adapater zip file to CMakeLists, Action and Workflow

--- a/.github/actions/build-cmake-preset/action.yml
+++ b/.github/actions/build-cmake-preset/action.yml
@@ -28,4 +28,9 @@ runs:
       id: cmake-build
       run: cmake --build --preset ${{ inputs.preset-name }}
       shell: bash
+      
+    - name: Pack ${{ inputs.preset-name }}
+      id: cmake-pack
+      run: cmake --build --preset ${{ inputs.preset-name }} --target package
+      shell: bash
 
