--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ if(NOT SILKIT_PACKAGE_DIR)
         silkit
         URL https://github.com/vectorgrp/sil-kit/releases/download/sil-kit%2Fv4.0.17/SilKit-4.0.17-ubuntu-18.04-x86_64-gcc.zip
         DOWNLOAD_DIR ${CMAKE_CURRENT_LIST_DIR}/Downloads
+        DOWNLOAD_EXTRACT_TIMESTAMP TRUE
     )
 
     message(STATUS "SIL Kit: fetching: silkit")
@@ -50,8 +51,86 @@ if(NOT TARGET SilKit::SilKit)
     message(FATAL_ERROR "Could not find SilKit package in ${SILKIT_PACKAGE_DIR}")
 endif()
 
-set(SILKIT_ADAPTERS_TAP_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
-
 add_subdirectory(tap/Utility)
 add_subdirectory(tap/adapter)
 add_subdirectory(tap/demos)
+
+################################################################################
+# Distribution of the source code and binaries
+################################################################################
+# Install sources and binaries
+# Copy all files from the source and bin directory to the proper destination
+# Filter by file types
+
+install(
+    DIRECTORY            
+        ${CMAKE_CURRENT_SOURCE_DIR}/tap            
+    DESTINATION Sources
+    COMPONENT source
+    FILES_MATCHING
+        PATTERN *.cpp
+        PATTERN *.cxx
+        PATTERN *.c
+        PATTERN *.rc
+        PATTERN *.h
+        PATTERN *.hpp
+        PATTERN *.hpp.in
+        PATTERN *.json
+        PATTERN *.yaml
+        PATTERN *.cmake
+        PATTERN *.cmake.in
+        PATTERN CMakeLists.txt
+        PATTERN Readme-*.txt
+        PATTERN *.txt.in
+        PATTERN *.md
+        PATTERN *.xml
+    REGEX "/ci/.*" EXCLUDE
+    REGEX "/ci$" EXCLUDE
+    REGEX "\.git$" EXCLUDE
+    REGEX "\.github$" EXCLUDE
+)
+
+install(
+    DIRECTORY
+        ${CMAKE_CURRENT_SOURCE_DIR}/third_party
+    DESTINATION Sources
+    COMPONENT source
+    REGEX "\.git$" EXCLUDE
+    REGEX "\.github$" EXCLUDE
+)
+
+install(
+    FILES
+        CMakeLists.txt
+        CMakePresets.json
+    DESTINATION Sources
+    COMPONENT source
+)
+
+install(
+    FILES
+        LICENSE        
+    DESTINATION .
+    COMPONENT source
+)
+
+install(
+    DIRECTORY
+        ${SILKIT_ADAPTERS_TAP_OUTPUT_DIRECTORY}
+    DESTINATION .
+    COMPONENT bin
+)
+
+###############################################################################
+# Packaging
+###############################################################################
+
+set(CPACK_GENERATOR "ZIP")
+
+set(CPACK_PACKAGE_DESCRIPTION "binary release of SIL Kit Adapters TAP")
+set(CPACK_PACKAGE_NAME "SilKit-Adapters-TAP")
+set(CPACK_PACKAGE_VENDOR "Vector Informatik")
+set(CPACK_PACKAGE_CONTACT "support@vector.com")
+set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-ubuntu-20.04-x86_64-gcc")
+
+include(CPack)
