--- a/.github/workflows/build-linux-release.yml
+++ b/.github/workflows/build-linux-release.yml
@@ -19,6 +19,7 @@ jobs:
         uses: ./.github/actions/build-cmake-preset
         with:
           preset-name: linux-release
+          args:  "-D SILKIT_ADATPERS_TAG_VERSION=$GITHUB_REF_NAME"
       - name: Release
         uses: softprops/action-gh-release@v1        
         with:
