--- a/tap/adapter/CMakeLists.txt
+++ b/tap/adapter/CMakeLists.txt
@@ -15,6 +15,6 @@ add_custom_command(
     TARGET SilKitAdapterTap
     POST_BUILD
     COMMAND ${CMAKE_COMMAND}
-    ARGS -E copy $<TARGET_PROPERTY:SilKit::SilKit,LOCATION> ${SILKIT_ADAPTERS_TAP_OUTPUT_DIRECTORY}
+    ARGS -E copy $<TARGET_FILE:SilKit::SilKit> ${SILKIT_ADAPTERS_TAP_OUTPUT_DIRECTORY}
 )
 
